Fix nav bug on mobile

--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -211,13 +211,15 @@
     .flex-nav {
         display: flex;
         justify-content: space-around;
-        padding-left: 20px;
+        align-items: baseline;
     }
     
     .flex-nav li {
-        flex: 3 1;
-        font-size: 1.5em;
+        display: flex;
+        font-size: 1.7em;
         margin-bottom: 20px;
+        justify-content: center;
+       
     }
     
     .hero {
